# libga_mpi

./: CMakeLists.txt  LICENSE  README.md
doc/: Makefile  bibliography.bib  kursawe.bib  libga_mpi.tex
examples/: native_build_and_run_MOP5  native_build_and_run_kursawe  native_build_and_run_rastrigin  python_run_MOP5  python_run_kursawe  python_run_rastrigin
inc/: common.hpp  island_model.hpp  mpi_util.hpp  mutation.hpp  rand_source.hpp  selectors.hpp  sga.hpp  spea2.hpp  spea2_io.hpp  topologies.hpp  xover.hpp
py/: MOP5.py  corrplot.py  fittest.py  front.py  gacommon.py  island_model.py  kursawe.py  merge_as_npz.py  merge_to_npz.py  paretoplot.py  paretoplot3d.py  rastrigin.py  sga.py  spea2.py  test_problems.py  to_npz.py
py/libga_gat/: canvasbase.py  canvasbase3d.py  fitnessplot.py  libga_gat.py  libga_gat.ui  optimizationprocess.py  paretoplot.py  paretoplot3d.py
py/libga_gat/html/: index.css  index.html
src/: MOP5.cpp  kursawe.cpp  rastrigin.cpp
